--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,9 @@ project(tasks)
 
 add_subdirectory(task1)
 add_subdirectory(task2)
-add_subdirectory(task3)
+add_subdirectory(task4_1)
+add_subdirectory(task4_2)
+add_subdirectory(task4_3)
+add_subdirectory(task5)
+add_subdirectory(task6)
+add_subdirectory(task8)
